# grid2img

./: README.md  example.grid  grid2img.spec  img2grid.spec  makefile  mymap.json  pyproject.toml
examples/: canada.grid  example.grid  git.grid  python.grid
src/grid2img/: __init__.py  __main__.py  grid2img.tcss  img2grid.py  tui.py
tests/: test_grid2img.py
