[tool.poetry]
name = "grid2img"
version = "1.0.0"
description = ""
authors = ["AfterNoon PM <h2o.Drop2010+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
pillow = "^12.0.0"

[tool.poetry.group.dev.dependencies]
build = "^1.3.0"
flake8 = "^7.3.0"
pytest = "^8.4.2"
twine = "^6.2.0"
wheel = "^0.45.1"
pyinstaller = "^6.17.0"

[tool.poetry.scripts]
grid2img = "grid2img.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
