[tool.poetry]
name = "grid2img"
version = "1.3.0"
description = "Revival and refactorization of my 2021 project \"Grid\". Converts a text file to a bitmap pixel art image."
authors = ["AfterNoon PM <h2o.Drop2010+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
pillow = "^12.0.0"
textual = "^7.0.1"

[tool.poetry.group.dev.dependencies]
build = "^1.3.0"
flake8 = "^7.3.0"
pytest = "^9.0.2"
twine = "^6.2.0"
wheel = "^0.45.1"
textual-dev = "^1.8.0"
pyinstaller = "^6.17.0"

[tool.poetry.scripts]
grid2img = "grid2img.__main__:main"
img2grid = "grid2img.img2grid:img2grid"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
